--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
          Google Maps Android API v2, but you must specify either coarse or fine
          location permissions for the 'MyLocation' functionality. 
     -->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <!--<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />-->
 
     <application
         android:allowBackup="true"
@@ -33,14 +33,15 @@
             android:label="@string/title_activity_maps">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ActivityAddTask"></activity>
+        <activity
+            android:name=".ActivityAddTask"
+            android:label="@string/title_activity_activity_add_task" />
         <activity
             android:name=".ActivitySelectLocation"
-            android:label="@string/title_activity_activity_select_location"></activity>
+            android:label="@string/title_activity_activity_select_location" />
     </application>
 
 </manifest>
